k8s/apps/health/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthz
  namespace: cloudradar
  labels:
    app.kubernetes.io/name: healthz
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: healthz
  template:
    metadata:
      labels:
        app.kubernetes.io/name: healthz
    spec:
      serviceAccountName: healthz
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
      containers:
        - name: healthz
          image: ghcr.io/clementv78/cloudradar/health:0.1.57
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
            initialDelaySeconds: 5
            timeoutSeconds: 2
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /readyz
              port: http
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
