k8s/apps/health/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: healthz
  namespace: cloudradar
  labels:
    app.kubernetes.io/name: healthz
spec:
  selector:
    app.kubernetes.io/name: healthz
  ports:
    - name: http
      port: 80
      targetPort: http
